Sonarqube frontend rules files are update as per latest updates

--- a/silverbulleters.sonarqube-inject-1.1.5/package.json
+++ b/silverbulleters.sonarqube-inject-1.1.5/package.json
@@ -227,7 +227,7 @@
           "description": "Only exclude files Path only.This exclude path are apply for sonarlint report generate not for sonarqube",
           "type": "string",
           "default": [
-            "d:\\gitproject\\app\\assert\\vendor\\**"
+            "c:\\Users\\venkatesang\\Desktop\\app\\assert\\vendor\\**","c:\\Users\\venkatesang\\Desktop\\app\\assert\\vendor\\**"
           ]
         }
       }
