--- a/silverbulleters.sonarqube-inject-1.1.5/sonar-web-frontend-reporters-master/rules/.csslintrc
+++ b/silverbulleters.sonarqube-inject-1.1.5/sonar-web-frontend-reporters-master/rules/.csslintrc
@@ -28,5 +28,6 @@
     "universal-selector": true,
     "unqualified-attributes": true,
     "vendor-prefix": true,
-    "zero-units": true
+    "zero-units": true,
+	"bulletproof-font-face": true
 }
