--- a/silverbulleters.sonarqube-inject-1.1.5/sonar-web-frontend-reporters-master/rules/.eslintrc
+++ b/silverbulleters.sonarqube-inject-1.1.5/sonar-web-frontend-reporters-master/rules/.eslintrc
@@ -6,129 +6,298 @@
   },
   "rules": {
     "angular/no-service-method": 0,
-    "no-template-curly-in-string": "error",
-    "no-unsafe-negation": "error",
-    "block-scoped-var": "error",
-    "curly": "error",
+    "array-bracket-spacing": "error",
+    "array-callback-return": "error",
+    "arrow-body-style": ["error", "as-needed"],
+    "arrow-parens": ["error", "as-needed"],
+    "arrow-spacing": "error",
+    "indent": ["error", 4, {SwitchCase: 1}],
+    "block-spacing": "error",
+    "brace-style": ["error", "1tbs"],
+    "camelcase": ["error", { properties: "never" }],
+    "callback-return": ["error", ["cb", "callback", "next"]],
+    "class-methods-use-this": "error",
+    "comma-dangle": "error",
+    "comma-spacing": "error",
+    "comma-style": ["error", "last"],
+    "consistent-return": "error",
+    "curly": ["error", "all"],
     "default-case": "error",
-    "dot-notation": "error",
+    "dot-notation": ["error", { allowKeywords: true }],
+    "eol-last": "error",
     "eqeqeq": "error",
+    "func-call-spacing": "error",
+    "func-style": ["error", "declaration"],
+    "generator-star-spacing": "error",
+    "guard-for-in": "error",
+    "key-spacing": ["error", { beforeColon: false, afterColon: true }],
+    "keyword-spacing": "error",
+    "lines-around-comment": ["error", {
+        "beforeBlockComment": true,
+        "afterBlockComment": false,
+        "beforeLineComment": true,
+        "afterLineComment": false
+    }],
+    "max-statements-per-line": "error",
+    "new-cap": "error",
+    "newline-after-var": "error",
+    "new-parens": "error",
     "no-alert": "error",
+    "no-array-constructor": "error",
     "no-caller": "error",
+    "no-confusing-arrow": "error",
+    "no-console": "error",
+    "no-delete-var": "error",
     "no-else-return": "error",
-    "no-eq-null": "error",
     "no-eval": "error",
+    "no-extend-native": "error",
     "no-extra-bind": "error",
-    "no-extra-label": "error",
+    "no-fallthrough": "error",
     "no-floating-decimal": "error",
     "no-global-assign": "error",
-    "no-implicit-coercion": "error",
     "no-implied-eval": "error",
+    "no-invalid-this": "error",
     "no-iterator": "error",
+    "no-label-var": "error",
     "no-labels": "error",
     "no-lone-blocks": "error",
     "no-loop-func": "error",
+    "no-mixed-spaces-and-tabs": ["error", false],
     "no-multi-spaces": "error",
     "no-multi-str": "error",
-    "no-new-func": "error",
-    "no-new-wrappers": "error",
+    "no-native-reassign": "off",
+    "no-nested-ternary": "error",
     "no-new": "error",
-    "no-octal-escape": "error",
-    "no-param-reassign": "error",
-    "no-proto": "error",
-    "no-return-assign": ["error", "always"],
-    "no-self-compare": "error",
-    "no-sequences": "error",
-    "no-throw-literal": "error",
-    "no-unmodified-loop-condition": "error",
-    "no-unused-expressions": "error",
-    "no-unused-labels": "error",
-    "no-useless-call": "error",
-    "no-useless-concat": "error",
-    "no-useless-escape": "error",
-    "no-void": "error",
-    "no-with": "error",
-    "radix": "error",
-    "no-label-var": "error",
-    "no-shadow-restricted-names": "error",
-    "no-undef-init": "error",
-    "no-undef": ["error", {
-      "typeof": true
-    }],
-    "no-use-before-define": ["error", "nofunc"],
-    "strict": ["error", "safe"],
-    "brace-style": "error",
-    "comma-dangle": ["error", "never"],
-    "comma-spacing": "error",
-    "comma-style": "error",
-    "func-names": ["error", "never"],
-    "indent": ["error", 2, {
-      "SwitchCase": 1
-    }],
-    "key-spacing": ["error", {
-      "align": "colon"
-    }],
-    "keyword-spacing": "error",
-    "linebreak-style": ["error", "unix"],
-    "max-depth": "warn",
-    "space-before-function-paren": ["error", "always"],
-    "max-nested-callbacks": ["warn", 4],
-    "max-statements-per-line": "error",
-    "new-cap": "error",
-    "new-parens": "error",
-    "no-array-constructor": "error",
-    "no-lonely-if": "error",
-    "no-mixed-operators": "error",
-    "no-mixed-spaces-and-tabs": "error",
-    "no-multiple-empty-lines": "error",
-    "no-negated-condition": "error",
+    "no-new-func": "error",
     "no-new-object": "error",
-    "no-restricted-syntax": ["error", "WithStatement"],
+    "no-new-wrappers": "error",
+    "no-octal": "error",
+    "no-octal-escape": "error",
+    "no-process-exit": "error",
+    "no-proto": "error",
+    "no-redeclare": "error",
+    "no-return-assign": "error",
+    "no-script-url": "error",
+    "no-self-assign": "error",
+    "no-sequences": "error",
+    "no-shadow": "error",
+    "no-shadow-restricted-names": "error",
+    "no-tabs": "error",
     "no-trailing-spaces": "error",
+    "no-undef": ["error", {typeof: true}],
+    "no-undef-init": "error",
+    "no-undefined": "error",
+    "no-underscore-dangle": ["error", {allowAfterThis: true}],
+    "no-unmodified-loop-condition": "error",
     "no-unneeded-ternary": "error",
-    "no-whitespace-before-property": "error",
+    "no-unused-expressions": "error",
+    "no-unused-vars": ["error", {vars: "all", args: "after-used"}],
+    "no-use-before-define": "error",
+    "no-useless-computed-key": "error",
+    "no-useless-concat": "error",
+    "no-useless-constructor": "error",
+    "no-useless-escape": "error",
+    "no-useless-return": "error",
+    "no-with": "error",
+    "no-var": "error",
     "object-curly-spacing": ["error", "always"],
-    "operator-assignment": "error",
+    "object-shorthand": "error",
+    "one-var-declaration-per-line": "error",
     "operator-linebreak": "error",
+    "prefer-arrow-callback": "error",
+    "prefer-const": "error",
+    "prefer-promise-reject-errors": "error",
+    "prefer-template": "error",
+    "quotes": ["error", "double"],
     "quote-props": ["error", "as-needed"],
-    "quotes": ["error", "single", {
-      "allowTemplateLiterals": true
-    }],
-    "semi-spacing": ["error", {
-      "before": false,
-      "after": true
-    }],
+    "radix": "error",
+    "require-jsdoc": "error",
     "semi": "error",
+    "semi-spacing": ["error", {"before": false, "after": true}],
     "space-before-blocks": "error",
+    "space-before-function-paren": ["error", "never"],
     "space-in-parens": "error",
     "space-infix-ops": "error",
-    "space-unary-ops": "error",
-    "spaced-comment": ["error", "always", {
-      "line": {
-        "exceptions": ["-"]
-      },
-      "block": {
-        "markers": ["!"],
-        "balanced": true
-      }
+    "space-unary-ops": ["error", {"words": true, "nonwords": false}],
+    "spaced-comment": ["error", "always", { "exceptions": ["-"]}],
+    "strict": ["error", "global"],
+    "template-curly-spacing": ["error", "never"],
+    "template-tag-spacing": "error",
+    "valid-jsdoc": ["error", {
+        "prefer": { "return": "returns"},
+        "preferType": {
+            "String": "string",
+            "Number": "number",
+            "Boolean": "boolean",
+            "object": "Object",
+            "function": "Function"
+        }
     }],
-    "unicode-bom": "error",
-    "arrow-parens": "error",
-    "arrow-spacing": ["error", {
-      "before": true,
-      "after": true
+    "wrap-iife": "error",
+    "yield-star-spacing": "error",
+    "yoda": ["error", "never"],
+
+    //Previously on by default in node environment
+    "no-catch-shadow": "off",
+    "no-mixed-requires": "error",
+    "no-new-require": "error",
+    "no-path-concat": "error",
+    "handle-callback-err": ["error", "err"],
+	
+	
+	"no-await-in-loop": "error",
+    "no-compare-neg-zero": "error",
+    "no-cond-assign": ["error", "always"],
+	"no-constant-condition": ["error", { "checkLoops": false }],
+    "no-control-regex": "error",
+    "no-debugger": "error",
+    "no-dupe-args": "error",
+    "no-dupe-keys": "error",
+	"no-duplicate-case": "error",
+    "no-empty": "error",
+    "no-empty-character-class": "error",
+	"no-ex-assign": "error",
+    "no-extra-boolean-cast": "error",
+    "no-extra-parens": "error",
+	"no-extra-semi": "error",
+    "no-func-assign": "error",
+    "no-inner-declarations": ["error", "both"],
+    "no-invalid-regexp": ["error", { "allowConstructorFlags": ["u", "y"] }],
+    "no-irregular-whitespace": "error",
+    "no-obj-calls": "error",
+    "no-prototype-builtins": "error",
+    "no-regex-spaces": "error",
+    "no-sparse-arrays": "error",
+    "no-template-curly-in-string": "error",
+    "no-unexpected-multiline": "error",
+    "no-unreachable": "error",
+    "no-unsafe-finally": "error",
+	//newley addrules.
+	"no-unsafe-negation": "error",
+    "use-isnan": "error",
+    "valid-typeof": "error",
+    "accessor-pairs": "error",
+    "block-scoped-var": "error",
+    "complexity": ["error", { "max": 2 }],
+    "dot-location": ["error", "object"],
+    "no-case-declarations": "error",
+    "no-div-regex": "error",
+	"no-empty-function": "error",
+    "no-empty-pattern": "error",
+    "no-eq-null": "error",
+    "no-extra-label": "error",
+    "no-implicit-globals": "error",
+    "no-magic-numbers": "error",
+    "no-param-reassign": "error","no-restricted-properties": [2, {
+            "object": "disallowedObjectName",
+            "property": "disallowedPropertyName"
+        }],
+    "no-return-await": "error",
+	"no-self-compare": "error",
+    "no-throw-literal": "error",
+    "no-unused-labels": "error",
+    "no-useless-call": "error",
+    "no-void": "error",
+    "no-warning-comments": ["error", { "terms": ["todo", "fixme", "any other term"], "location": "anywhere" }],
+    "require-await": "error",
+    "init-declarations": ["error", "never", { "ignoreForLoopInit": true }],
+    "no-restricted-globals": ["error", "event"],
+	"global-require": "error",
+    "no-process-env": "error",
+    "no-restricted-modules": ["error",
+        "assert","buffer","child_process","cluster","crypto","dgram","dns","domain","events","freelist","fs","http","https","module","net","os","path","punycode","querystring","readline","repl","smalloc","stream","string_decoder","sys","timers","tls","tracing","tty","url","util","vm","zlib"
+    ],
+    "no-sync": "error",
+    "capitalized-comments": [
+        "error",
+        "always",
+        {
+            "ignorePattern": "pragma|ignored",
+            "ignoreInlineComments": true
+        }
+    ],
+    "computed-property-spacing": ["error", "never"],
+    "consistent-this": ["error", "that"],
+    "func-name-matching": "error",
+    "func-names": ["error", "never"],
+	"id-blacklist": ["error", "data", "err", "e", "cb", "callback"],
+	"id-length": "error",
+	"id-match": ["error", "^[a-z]+([A-Z][a-z]+)*$"],
+	"jsx-quotes": ["error", "prefer-single"],
+	"line-comment-position": ["error", { "position": "beside" }],
+    "linebreak-style": ["error", "unix"],
+    "lines-around-directive": ["error", "always"],
+	"max-depth": ["error", 4],
+    "max-len": ["error", 80],
+	"max-lines": ["error", {"max": 300, "skipComments": false}],
+	"max-nested-callbacks": ["error", 10],
+	"max-params": ["error", 7],
+    "max-statements": ["error", 10],
+    "multiline-ternary": ["error", "always"],
+    "newline-before-return": "error",
+    "newline-per-chained-call": ["error", { "ignoreChainWithDepth": 2 }],
+	"no-bitwise": "error",
+	"no-continue": "error",
+    "no-inline-comments": "error",
+	"no-mixed-operators": [
+        "error",
+        {
+            "groups": [
+                ["+", "-", "*", "/", "%", "**"],
+                ["&", "|", "^", "~", "<<", ">>", ">>>"],
+                ["==", "!=", "===", "!==", ">", ">=", "<", "<="],
+                ["&&", "||"],
+                ["in", "instanceof"]
+            ],
+            "allowSamePrecedence": true
+        }
+    ],
+    "no-multi-assign": "error",
+    "no-negated-condition": "error",
+	"no-plusplus": ["error",{ "allowForLoopAfterthoughts": true }],
+    "no-restricted-syntax": ["error", "FunctionExpression", "WithStatement", "BinaryExpression[operator='in']"],
+    "no-ternary": "error",
+    "no-whitespace-before-property": "error",
+    "nonblock-statement-body-position": ["error", "below"] ,
+	"object-curly-newline": ["error", {
+        "ObjectExpression": "always",
+        "ObjectPattern": { "multiline": true }
     }],
-    "generator-star-spacing": ["error", "both"],
-    "no-duplicate-imports": ["error", {
-      "includeExports": true
+	"one-var": ["error", "always"],
+	"operator-assignment": ["error", "always"],
+	"padded-blocks": ["error", "always"],
+	"sort-keys": "error",
+    "sort-vars": "error",
+    "unicode-bom": ["error", "never"],
+    "wrap-regex": "error",
+    "constructor-super": "error",
+	"no-class-assign": "error",
+	"no-const-assign": "error",
+    "no-dupe-class-members": "error",
+	"no-duplicate-imports": ["error", { "includeExports": true }],
+    "no-new-symbol": "error",
+    "no-restricted-imports": ["error", "import1", "import2"],
+	"no-this-before-super": "error",
+	"no-useless-rename": ["error", {
+    "ignoreDestructuring": false,
+    "ignoreImport": false,
+    "ignoreExport": false
+	}],
+	"prefer-destructuring": ["error", {
+      "array": true,
+      "object": true
+    }, {
+      "enforceForRenamedProperties": false
     }],
-    "no-useless-computed-key": "error",
-    "no-useless-constructor": "error",
-    "no-useless-rename": "error",
-    "rest-spread-spacing": "error",
-    "symbol-description": "error",
-    "template-curly-spacing": "error",
-    "yield-star-spacing": ["error", "both"]
+    "prefer-numeric-literals": "error",
+    "prefer-spread": "error",
+    "require-yield": "error",
+    "sort-imports": ["error", {
+        "ignoreCase": false,
+        "ignoreMemberSort": false,
+        "memberSyntaxSortOrder": ["none", "all", "multiple", "single"]
+    }],
+	"symbol-description": "error"
   },
   "env": {
     "browser": true
