--- a/silverbulleters.sonarqube-inject-1.1.5/sonar-web-frontend-reporters-master/rules/.htmlhintrc
+++ b/silverbulleters.sonarqube-inject-1.1.5/sonar-web-frontend-reporters-master/rules/.htmlhintrc
@@ -1,14 +1,25 @@
 {
+  "tagname-lowercase": true,
   "attr-lowercase": true,
   "attr-value-double-quotes": true,
-  "doctype-first": false,
-  "doctype-html5": true,
-  "force": true,
-  "id-unique": true,
-  "img-alt-require": true,
+  "doctype-first": true,
+  "tag-pair": true,
   "spec-char-escape": true,
+  "id-unique": true,
   "src-not-empty": true,
-  "style-disabled": false,
-  "tagname-lowercase": true,
-  "tag-pair": true
+  "attr-no-duplication": true,
+  "title-require": true,
+  "head-script-disabled": true,
+  "tag-self-close": true,
+  "alt-require": true,
+  "doctype-html5": true,
+  "id-class-value": "dash",
+  "style-disabled": true,
+  "inline-style-disabled": true,
+  "inline-script-disabled": true,
+  "space-tab-mixed-disabled": "space",
+  "id-class-ad-disabled": true,
+  "href-abs-or-rel": "abs",
+  "attr-unsafe-chars": true,
+  "attr-value-not-empty": true
 }
